racing-analytics-sf/force-app/main/default/objects/Driver__c/fields/Championship_Position__c.field-meta.xml
<CustomField>
    <fullName>Championship_Position__c</fullName>
    <label>Championship Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>