racing-analytics-sf/force-app/main/default/objects/Driver__c/fields/Driver_Points__c.field-meta.xml
<CustomField>
    <fullName>Driver_Points__c</fullName>
    <label>Driver Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>