racing-analytics-sf/force-app/main/default/objects/Driver__c/fields/Podiums__c.field-meta.xml
<CustomField>
    <fullName>Podiums__c</fullName>
    <label>Podiums</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>