racing-analytics-sf/force-app/main/default/objects/Driver__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <label>Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>